--- a/render.yaml
+++ b/render.yaml
@@ -8,7 +8,7 @@ services:
   - type: web
     name: examen_m06
     runtime: ruby
-    plan: free  pro  # Cambiado a plan profesional
+    plan: starter  # Cambiado a plan profesional
     buildCommand: "./bin/render-build.sh"
     preDeployCommand: "bundle exec rails db:migrate" # Ahora puedes habilitar esto en un plan profesional
     startCommand: "bundle exec rails server"
