--- a/render.yaml
+++ b/render.yaml
@@ -1,21 +1,20 @@
 databases:
-  - name: examen_m06
-    databaseName: examen_m06
-    user: examen_m06
-    plan: standard      # Cambiado a plan profesional
+  - name: miproyecto
+    databaseName: miproyecto
+    user: miproyecto
+    plan: free      # Cambiado a plan profesional
 
 services:
   - type: web
-    name: examen_m06
+    name: miproyecto
     runtime: ruby
-    plan: standard   # Cambiado a plan profesional
+    plan: free   # Cambiado a plan profesional
     buildCommand: "./bin/render-build.sh"
-    preDeployCommand: "bundle exec rails db:migrate" # Ahora puedes habilitar esto en un plan profesional
     startCommand: "bundle exec rails server"
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: examen_m06
+          name: miproyecto
           property: connectionString
       - key: RAILS_MASTER_KEY
         sync: false
