Actualización para deploy en Render

--- a/config/database.yml
+++ b/config/database.yml
@@ -78,8 +78,8 @@ development:
 # Read https://guides.rubyonrails.org/configuring.html#configuring-a-database
 # for a full overview on how database connection configuration can be specified.
 #
-# production:
-#   <<: *default
-#   database: examen_m06_production
-#   username: examen_m06
-#   password: <%= ENV["EXAMEN_M06_DATABASE_PASSWORD"] %>
+production:
+  <<: *default
+  database: mysite_9afn
+  username: examen_m06
+  password: <%= ENV["EXAMEN_M06_DATABASE_PASSWORD"] %>
