--- a/render.yaml
+++ b/render.yaml
@@ -1,12 +1,12 @@
 databases:
-  - name: miproyecto
-    databaseName: miproyecto
+  - name: mysite_9afn
+    databaseName: mysite_9afn
     user: miproyecto
     plan: free
 
 services:
   - type: web
-    name: miproyecto
+    name: examen_06
     runtime: ruby
     plan: free
     buildCommand: "./bin/render-build.sh"
@@ -15,7 +15,7 @@ services:
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: miproyecto
+          name: mysite_9afn
           property: connectionString
       - key: RAILS_MASTER_KEY
         sync: false
